# distill-nas-yolov26-visdrone

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml  supernet_distill.yaml  yolov26x_visdrone_eval.yaml  yolov26x_visdrone_finetune.yaml
src/distill_nas_yolov26_visdrone.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/visdrone_det/: __init__.py  benchmark.py  cli.py  distill.py  distill_famo.py  distill_famo_mask.py  finetune.py  infer.py  patches.py  search.py  supernet.py  visdrone.py
tests/: test_cli.py  test_distill_famo.py  test_distill_famo_mask.py  test_search.py  test_supernet.py  test_visdrone_conversion.py
