[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distill-nas-yolov26-visdrone"
version = "0.1.0"
description = "Reusable training and evaluation code for YOLOv26 distillation/NAS experiments on VisDrone."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
kaggle = [
    "ultralytics>=8.3.0",
    "wandb>=0.17.0",
]
dev = ["pytest>=8"]

[project.scripts]
visdrone-det = "visdrone_det.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
